[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-guardrails"
version = "0.7.2"
description = "A reliability layer for self-hosted LLM tool-calling. Guardrails, context management, and backend adapters for multi-step agentic workflows."
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "Antoine Zambelli"}]
readme = "README.md"
keywords = ["llm", "tool-calling", "agents", "guardrails", "local-models", "ollama", "llama-cpp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/antoinezambelli/forge"
Repository = "https://github.com/antoinezambelli/forge"
Documentation = "https://github.com/antoinezambelli/forge/tree/main/docs"
Changelog = "https://github.com/antoinezambelli/forge/blob/main/CHANGELOG.md"

[project.scripts]
forge-proxy = "forge.proxy.__main__:main"

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "anthropic>=0.40",
    "mpmath",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a running LLM backend (deselect with '-m \"not integration\"')",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["forge"]

[tool.coverage.report]
omit = [
    # Integration-only: lifecycle orchestration requiring real backends/threads.
    # Covered by eval harness runs, not unit tests.
    "src/forge/proxy/proxy.py",
    "src/forge/proxy/__main__.py",
]
